[package]
name = "uids"
version = "0.2.0"
edition = "2021"
description = "PostgreSQL Extension to generate various type of Unique IDS."

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = []

[dependencies]
nanoid = "0.4.0"
pgx = "0.4.5"
rusty_ulid = "1.0.0"
svix-ksuid = "0.6.0"

[dev-dependencies]
pgx-tests = "0.4.5"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
