[package]
name = "uids"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
nanoid = "0.4.0"
pgrx = "=0.11.4"
rusty_ulid = "2.0.0"
svix-ksuid = "0.8.0"
type-safe-id = "0.3.0"
uuid = { version = "1.8.0", features = [
    "v7",
    "v4",
    "v6",
    "v8",
    "fast-rng",
    "macro-diagnostics",
] }
getrandom = "0.2"
cuid2 = "0.1.2"
timeflake-rs = "0.3.0"
pushid = "0.0.1"

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
